# PL-step-generator

./: .flake8  .gitignore  CHANGELOG.md  PL-260114-01-1550-19_profile.xlsx  README.md  lantern_step_gui.py  make_step_from_profile.ipynb  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
examples/: make_step_from_profile.ipynb
packaging/: build_macos.sh  build_windows.bat  lantern_step.spec
src/lantern_step/: __init__.py  __main__.py  cli.py  core.py  gui.py  references.py
tests/: test_cli.py  test_core.py  test_references.py  test_selftest.py
